@@ -18,6 +18,6 @@ JAVA_HOME=${JAVA_HOME}
 HCAT_PID_DIR=${HCAT_PID_DIR}
 HCAT_LOG_DIR=${HCAT_LOG_DIR}
 HCAT_CONF_DIR=${HCAT_CONF_DIR}
-DBROOT=${DBROOT}
-USER=hcat
-METASTORE_PORT=9933
+DBROOT=${DBJARS}
+USER=${USER}
+METASTORE_PORT=${METASTORE_PORT}
